--- a/packages/airburst/package.json
+++ b/packages/airburst/package.json
@@ -7,5 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/express": "^4.17.6",
+    "@types/express-graphql": "^0.9.0",
+    "@types/express-jwt": "0.0.42",
+    "@types/graphql": "^14.5.0",
+    "@types/knex": "^0.16.1",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "express-jwt": "^5.3.3",
+    "graphql": "^15.0.0",
+    "knex": "^0.21.0"
+  }
 }
