--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lerna": "^3.20.2"
+    "@types/sha.js": "^2.4.0",
+    "lerna": "^3.20.2",
+    "sha.js": "^2.4.11"
   }
 }
