--- a/packages/airburst/src/config/config.json
+++ b/packages/airburst/src/config/config.json
@@ -5,7 +5,7 @@
         "database": "airburst-api",
         "host": "localhost",
         "port": "3306",
-        "user": "jeremy",
-        "password": "jeremy" 
+        "user": "root",
+        "password": "password" 
     }
 }
