--- a/packages/airburst/package.json
+++ b/packages/airburst/package.json
@@ -20,7 +20,9 @@
     "graphql": "^15.0.0",
     "knex": "^0.21.0",
     "mysql": "^2.18.1",
-    "rollup": "^2.6.1"
+    "rollup": "^2.6.1",
+    "rollup-plugin-copy": "^3.3.0",
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.0.3",
