--- a/packages/airburst-database/package.json
+++ b/packages/airburst-database/package.json
@@ -2,10 +2,24 @@
   "name": "airburst-database",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "lib/airburst-database.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/bookshelf": "^1.1.0",
+    "bookshelf": "^1.1.1",
+    "knex": "^0.21.0",
+    "rollup": "^2.6.1",
+    "rollup-plugin-sourcemaps": "^0.5.0",
+    "rollup-plugin-typescript2": "^0.27.0",
+    "sqlite3": "^4.1.1",
+    "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3"
+  }
 }
