--- a/packages/airburst/package.json
+++ b/packages/airburst/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "debug": "rollup -c && node ./lib/airburst.min.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +15,8 @@
     "@types/express-jwt": "0.0.42",
     "@types/graphql": "^14.5.0",
     "@types/knex": "^0.16.1",
+    "airburst-database": "file:../airburst-database",
+    "bookshelf": "^1.1.1",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "express-jwt": "^5.3.3",
@@ -22,6 +25,7 @@
     "mysql": "^2.18.1",
     "rollup": "^2.6.1",
     "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-sourcemaps": "^0.5.0",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
