--- a/packages/airburst-database/package.json
+++ b/packages/airburst-database/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/bookshelf": "^1.1.0",
+    "@types/crypto-js": "^3.1.44",
     "bookshelf": "^1.1.1",
+    "crypto-js": "^4.0.0",
     "knex": "^0.21.0",
     "rollup": "^2.6.1",
     "rollup-plugin-sourcemaps": "^0.5.0",
