--- a/packages/airburst/package.json
+++ b/packages/airburst/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/crypto-js": "^3.1.44",
     "@types/express": "^4.17.6",
     "@types/express-graphql": "^0.9.0",
     "@types/express-jwt": "0.0.42",
@@ -17,6 +18,7 @@
     "@types/knex": "^0.16.1",
     "airburst-database": "file:../airburst-database",
     "bookshelf": "^1.1.1",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "express-jwt": "^5.3.3",
